src/main/default/objects/Override_Config__c/Override_Config__c.object-meta.xml
<CustomObject>
    <label>Override Config</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Override Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>