src/main/default/objects/Override_Config__c/fields/Applies_to_SObject__c.field-meta.xml
<CustomField>
    <fullName>Applies_to_SObject__c</fullName>
    <label>Applies to SObject</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OverrideSObject</valueSetName>
    </valueSet>
</CustomField>