src/main/default/objects/Override_Config__c/fields/Apply_Null__c.field-meta.xml
<CustomField>
    <fullName>Apply_Null__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Apply Null is true, it would allow clearing the value with override.</description>
    <label>Apply Null</label>
    <type>Checkbox</type>
</CustomField>