src/main/default/objects/Override_Config__c/fields/Filter_Clause__c.field-meta.xml
<CustomField>
    <fullName>Filter_Clause__c</fullName>
    <label>Filter Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>