src/main/default/objects/Override_Config__c/fields/IsAggregation__c.field-meta.xml
<CustomField>
    <fullName>IsAggregation__c</fullName>
    <formula>OR(CONTAINS(UPPER(Override_Fields__c), 'MAX('),CONTAINS(UPPER(Override_Fields__c), 'MIN('),CONTAINS(UPPER(Override_Fields__c), 'SUM('),CONTAINS(UPPER(Override_Fields__c), 'AVG('))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAggregation</label>
    <type>Checkbox</type>
</CustomField>