src/main/default/objects/Override_Config__c/fields/Override_Fields__c.field-meta.xml
<CustomField>
    <fullName>Override_Fields__c</fullName>
    <label>Override Fields</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>