src/main/default/objects/Override_Config__c/fields/Override_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Type__c</fullName>
    <label>Override Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OverrideType</valueSetName>
    </valueSet>
</CustomField>