src/main/default/objects/Override_Config__c/fields/Sort_Clause__c.field-meta.xml
<CustomField>
    <fullName>Sort_Clause__c</fullName>
    <label>Sort Clause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>