src/main/default/objects/Override_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Override_Fields__c</columns>
    <columns>Override_Type__c</columns>
    <columns>Filter_Clause__c</columns>
    <columns>IsAggregation__c</columns>
    <columns>Apply_Null__c</columns>
    <columns>Applies_to_SObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>